[완료 사항] 1.정규식으로 이미지 url 추출하여, glide로 이미지 로딩하는 것 완료 [수정필요] 1.glide로 출력한 이미지 사이즈 device 사이즈에 따라 자동으로 변경되도록 하기 2.imgeView 동적으로 추가되도록 수정필요

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -36,6 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <LinearLayout
+            android:id="@+id/linear_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -54,8 +55,8 @@
                 android:id="@+id/thumbNail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:srcCompat="@tools:sample/avatars"
-                android:adjustViewBounds="true"/>
+                android:adjustViewBounds="true"
+                tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
                 android:id="@+id/placeTextView"
@@ -131,7 +132,7 @@
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"/>
+                android:layout_height="200dp" />
 
             <TextView
                 android:id="@+id/contentsTextView"
@@ -139,6 +140,12 @@
                 android:layout_height="wrap_content"
                 android:text="줄거리"
                 android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/contentImageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars" />
 
             <ListView
                 android:layout_width="match_parent"
